# inluup3

inluup3/: 12  12_11.c  CMakeLists.txt  double_stack.h  double_stack_array.c  double_stack_array.h  double_stack_list.c  list.c  list.h  task.c  task3_1.c  task3_2  task3_2.c  task3_4  task3_4.c  task3_5  task3_5.c  task3_55.c  task3_6.c  task6  task6.c  task_2.c  task_4.c
